Start canabalizing the minima theme

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,8 @@
 include: [legal]
 # General Jekyll Config
+theme: minima
+plugins:
+    - jekyll-feed
 highlighter: rouge
 url: https://autodo.app
 lsi: false
