--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -17,7 +17,7 @@ social:
   #flickr: johndoe
 
 # Google Analytics key, leave blank to ignore
-google_analytics_key: UA-xxxx-x
+google_analytics_key: UA-145122049-1
 
 # Toggle "Postings are my own" disclaimer in footer
 show_disclaimer: true
