--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 #page title
-page_title                                : auToDo                                    # Automatically populates with app name if not set and if iOS app ID is set. Otherwise enter manually.
+title: auToDo
 
 # App Info
 ios_app_id                                : 1498684737                                # Required. Enter iOS app ID to automatically populate name, price and icons (e.g. 718043190).
@@ -11,12 +11,11 @@ playstore_link                            : https://play.google.com/store/apps/d
 
 app_icon                                  : # assets/appicon.png                      # Automatically populates if not set and if iOS app ID is set.  Otherwise enter path to icon file manually.
 app_name                                  : auToDo                                    # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
+# header_name: auToDo
 app_price                                 :                                           # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
 app_description                           : Car Maintenance Tracking Made Simple.
 
 enable_smart_app_banner                   : true                                      # Set to true to show a smart app banner at top of page on mobile devices.
-
-
 
 # Information About Yourself
 # your_name                                 : Jonathan Bayless and David Pham-Van                              
